Dropzone styling issues (#1747)
* Set success checkmark style to green for dropzone areas

* Move dropzone area error messages down so that they do not cover the removal link

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -251,6 +251,10 @@ form[data-remote] {
 }
 
 .dz-success-mark {
-  background: $secondary;
+  background: $primary;
   border-radius: 100px;
+}
+
+.dz-error-message {
+  margin-top: 1em;
 }
